--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "redux": "^3.3.1"
   },
   "devDependencies": {
+    "autoprefix": "^0.1.4",
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
@@ -36,7 +38,10 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
+    "postcss-loader": "^0.8.2",
+    "precss": "^1.4.0",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
