--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Estimations redux nodejs mysql",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server/server.babel.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,16 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "babel-runtime": "^6.6.1",
+    "body-parser": "^1.15.0",
+    "es6-promise": "^3.1.2",
+    "isomorphic-fetch": "^2.2.1",
+    "pg": "^4.5.4",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.1",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
+    "sql": "^0.67.0"
   },
   "devDependencies": {
     "autoprefix": "^0.1.4",
