--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.1",
+    "react-router": "^2.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "sql": "^0.67.0"
