--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router": "^2.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
+    "socket.io": "^1.4.6",
+    "socket.io-client": "^1.4.6",
     "sql": "^0.67.0"
   },
   "devDependencies": {
