--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,40 @@
 {
-  "extends": "eslint:recommended",
-  "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "plugins": [
-    "react"
-  ],
-  "rules": {
-    "no-console": 0,
-    "new-cap": 0,
-    "strict": 0,
-    "no-underscore-dangle": 0,
-    "no-use-before-define": 0,
-    "eol-last": 0,
-    "quotes": [2, "single"],
-    "jsx-quotes": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1
+    "extends": "airbnb",
+    "env": {
+        "browser": true,
+        "node": true,
+        "mocha": true
+    },
+ "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "forOf": true,
+            "jsx": true,
+            "es6": true,
+            "experimentalObjectRestSpread" : true
+        },
+    },
+    "rules": {
+        "comma-dangle": 0,
+        "indent": 0,
+        "react/prop-types": 0,
+        "react/jsx-indent-props" : 0,
+        "react/jsx-closing-bracket-location" : 0,
+        "object-curly-spacing" : 0,
+        "arrow-body-style": 0,
+        "no-console": 0,
+        "max-len": 0,
+        "prefer-template": 0,
+        "import/no-unresolved": 0,
+        "global-require": 0,
+        "no-underscore-dangle": 0
+    },
+    "plugins": [
+        "react"
+      ],
+     "globals": {
+        "__DEVSERVER__": true,
+        "__DEVCLIENT__": true
   }
 }
