--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-*/.DS_Store
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-
 node_modules
 npm-debug.log
-book_img
+.tmp
+.idea
+public
+compiled
+.swp
+.vscode
