--- a/package.json
+++ b/package.json
@@ -1,58 +1,132 @@
 {
-  "name": "estimations",
-  "version": "1.0.0",
-  "description": "Estimations redux nodejs mysql",
+  "name": "Estimations",
+  "version": "2.0.0",
+  "description": "App to estimate your project",
+  "repository": "https://github.com/Katarinich/Estimations_redux_nodejs_mysql",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.babel.js"
+    "babel": "babel --presets es2015,stage-0 --ignore node_modules,public",
+    "babel-node": "babel-node --presets es2015,stage-0 --ignore node_modules,public",
+    "sequelize": "node_modules/.bin/sequelize",
+    "lint": "eslint app server",
+    "clean": "rimraf public && rimraf compiled",
+    "start": "cross-env NODE_ENV=production node compiled/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "build:dev": "cross-env NODE_ENV=development webpack --colors --config ./webpack/webpack.config.dev-server.js",
+    "build:prod": "cross-env NODE_ENV=production webpack --colors --config ./webpack/webpack.config.prod.js",
+    "build:node": "cross-env NODE_ENV=production npm run babel -- ./server -d ./compiled",
+    "build": "npm run clean && npm run build:prod && npm run build:node",
+    "test": "cross-env NODE_ENV=test karma start",
+    "test:watch": "cross-env NODE_ENV=test npm test -- --watch --no-single-run",
+    "postinstall": "npm run build",
+    "keep-green": "git merge master && rm -rf node_modules && npm install && npm start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Katarinich/Estimations_redux_nodejs_mysql.git"
-  },
-  "author": "Katarina Chirich",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Katarinich/Estimations_redux_nodejs_mysql/issues"
-  },
-  "homepage": "https://github.com/Katarinich/Estimations_redux_nodejs_mysql#readme",
-  "dependencies": {
-    "babel-polyfill": "^6.7.4",
-    "babel-runtime": "^6.6.1",
-    "body-parser": "^1.15.0",
-    "es6-promise": "^3.1.2",
-    "isomorphic-fetch": "^2.2.1",
-    "pg": "^4.5.4",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.4.0",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1",
-    "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6",
-    "sql": "^0.67.0"
-  },
+  "author": "Chirich K.",
+  "license": "MIT",
   "devDependencies": {
-    "autoprefix": "^0.1.4",
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "expect": "^1.15.2",
+    "karma": "^1.1.2",
+    "karma-jsdom-launcher": "^4.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^3.0.1",
+    "nock": "^8.0.0",
+    "nodemon": "^1.10.2",
+    "null-loader": "^0.1.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "redux-mock-store": "1.1.2",
+    "sinon": "^1.17.5",
+    "stylelint": "^7.1.0",
+    "stylelint-webpack-plugin": "^0.3.1"
+  },
+  "engines": {
+    "node": "5.x"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.4.0",
+    "axios": "^0.14.0",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-plugin-transform-react-inline-elements": "^6.6.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.3",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^2.7.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.3.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.6",
+    "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
+    "classnames": "^2.2.3",
+    "compression": "^1.6.2",
+    "connect-mongo": "^1.3.2",
+    "connect-pg-simple": "^3.1.0",
+    "cross-env": "^2.0.1",
+    "css-loader": "^0.25.0",
+    "deep-equal": "^1.0.1",
+    "es6-promise": "^3.1.2",
     "express": "^4.13.4",
-    "postcss-loader": "^0.8.2",
-    "precss": "^1.4.0",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "express-flash": "0.0.2",
+    "express-session": "^1.14.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "helmet": "^2.1.2",
+    "immutable": "^3.7.6",
+    "inline-environment-variables-webpack-plugin": "1.1.0",
+    "invariant": "^2.2.1",
+    "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
+    "jsonwebtoken": "^7.1.9",
+    "kerberos": "0.0.21",
+    "lodash": "^4.16.2",
+    "method-override": "^2.3.5",
+    "mongoose": "^4.5.10",
+    "node-libs-browser": "^1.0.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.13.0",
+    "postcss-reporter": "^1.4.1",
+    "postcss-simple-vars": "^3.0.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-helmet": "^3.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.0",
+    "react-transform-hmr": "^1.0.4",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
+    "redux-mock-store": "^1.1.4",
+    "redux-thunk": "^2.0.1",
+    "rimraf": "^2.5.4",
+    "sequelize": "^3.24.1",
+    "sequelize-cli": "^2.3.1",
+    "spark-md5": "^2.0.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "warning": "^3.0.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
