--- a/package.json
+++ b/package.json
@@ -92,9 +92,11 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "jsonwebtoken": "^7.1.9",
+    "jwt-decode": "^2.1.0",
     "kerberos": "0.0.21",
     "lodash": "^4.16.2",
     "method-override": "^2.3.5",
+    "moment": "^2.17.0",
     "mongoose": "^4.5.10",
     "node-libs-browser": "^1.0.0",
     "passport": "^0.3.2",
