--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "postcss-reporter": "^1.4.1",
     "postcss-simple-vars": "^3.0.0",
     "react": "^15.3.1",
+    "react-bootstrap-table": "^2.6.0",
     "react-dom": "^15.3.1",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
