--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,8 @@
         "global-require": 0,
         "no-underscore-dangle": 0,
         "semi": ["warn", "never"],
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": ["error", "windows"],
+        "no-trailing-spaces": 0
     },
     "plugins": [
         "react"
