--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.14.1",
+    "express-validator": "^3.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "helmet": "^2.1.2",
